# Garbled-Circuit

./: CMakeCache.txt  CMakeLists.txt  GLNP.cpp  Makefile  README.md  cmake_install.cmake  glnp_eval.h  glnp_gen.h  mitccraes.h  test  test.cpp
